--- a/Pascal-llvm.vcxproj.filters
+++ b/Pascal-llvm.vcxproj.filters
@@ -15,9 +15,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="src\lex\Lex.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
@@ -48,16 +45,25 @@
     <ClCompile Include="src\syntax\SyntaxLr.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="src\semantic\Exp.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="src\semantic\FuncDef.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="src\semantic\SymbolTable.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="src\semantic\VarDef.cpp">
+    <ClCompile Include="src\cmd.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\main.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\semantic\ExpIR.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\semantic\FuncIR.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\semantic\TypeIR.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\semantic\VarIR.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
@@ -89,16 +95,22 @@
     <ClInclude Include="include\syntax\SyntaxLr.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="include\semantic\Exp.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="include\semantic\FuncDef.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
     <ClInclude Include="include\semantic\SymbolTable.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="include\semantic\VarDef.h">
+    <ClInclude Include="include\cmd.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="include\semantic\ExpIR.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="include\semantic\FuncIR.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="include\semantic\TypeIR.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="include\semantic\VarIR.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
